<resources>
    <string name="app_name">KryptoNote</string>
    <string name="load">LOAD</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="file_name">File Name</string>
    <string name="decrypt">DECRYPT</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="cryptographic_key">Cryptographic Key</string>
    <string name="dat">...</string>
</resources>